Move resources to subdirectory and revamp homepage theme

--- a/res/html/header.html
+++ b/res/html/header.html
@@ -3,7 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="$META">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="home.css">
 <title>Home - $NAME</title>
 </head>
 <body>
@@ -12,3 +13,4 @@
 </header>
 <article>
 <h2>Index of all posts</h2>
+<div>
